@@ -53,6 +53,7 @@
   52. Can now LIST AREATYPES
   53. Individual diseases can now be disabled from the DISABLE= entry in the INI file.
   54. New Commoner class in beta: Sailor  
+  55. Patroller now works with Sailing Ships.
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
